ERILON-25 Добвить пререквизиты к достоинствам
обратная связь, удаления достоинства при понижении пререквизитов, для пререквизитов типа атрибутов  и прикрепленных навыков

подфикс

--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -811,7 +811,10 @@
     app.controller("personageController", function ($scope, $http) {
         $scope.isMobile = isMobile.android.phone;
         $scope.meritAvailable = true;
-        $scope.prerequisites = {};
+        $scope.prerequisites = {
+            attributePrerequisites: {},
+            attachedSkillsPrerequisites: {}
+        };
 
         $http.get('/personageAttributesByPersonageId/' + personageId).
         success(function (data) {
