--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -811,60 +811,6 @@
     app.controller("personageController", function ($scope, $http) {
         $scope.isMobile = isMobile.android.phone;
         $scope.meritAvailable = true;
-        $scope.prerequisites = {
-            attributePrerequisites: {},
-            attachedSkillsPrerequisites: {}
-        };
-
-        $http.get('/personageAttributesByPersonageId/' + personageId).
-        success(function (data) {
-            $scope.personageAttributes = data.personageAttributes;
-        });
-
-        $http.get('/personageMeritsByPersonageId/' + personageId).
-        success(function (data) {
-            $scope.personageMerits = data.personageMerits;
-
-            angular.forEach(data.personageMerits, function (personageMerit) {
-                $http.get('/meritAttributesByMeritId/' + personageMerit.Merit.id).
-                success(function (results) {
-                    $scope.prerequisites.attributePrerequisites = {
-                        meritAttributes: results.meritAttributes,
-                        personageMerit: personageMerit
-                    };
-                });
-
-                $http.get('/meritAttachedSkillsByMeritId/' + personageMerit.Merit.id).
-                success(function (results) {
-                    $scope.prerequisites.attachedSkillsPrerequisites = {
-                        meritAttachedSkills: results.meritAttachedSkills,
-                        personageMerit: personageMerit
-                    };
-                });
-            });
-
-
-        });
-
-        $http.get('/personageInherentsByPersonageId/' + personageId).
-        success(function (data) {
-            $scope.personageInherents = data.personageInherents;
-        });
-
-        $http.get('/personageFlawsByPersonageId/' + personageId).
-        success(function (data) {
-            $scope.personageFlaws = data.personageFlaws;
-        });
-
-        $http.get('/personageAttachedSkillsByPersonageId/' + personageId).
-        success(function (data) {
-            $scope.personageAttachedSkills = data.personageAttachedSkills;
-        });
-
-        $http.get('/personageTriggerSkillsByPersonageId/' + personageId).
-        success(function (data) {
-            $scope.personageTriggerSkills = data.personageTriggerSkills;
-        });
 
         $http.get('/merits').
         success(function (results) {
@@ -907,6 +853,12 @@
             $scope.experienceValid = function () {
                 return $scope.personage.experience < 0;
             };
+            $scope.personageAttributes = data.personage.PersonageAttributes;
+            $scope.personageMerits = data.personage.PersonageMerits;
+            $scope.personageInherents = data.personage.PersonageInherents;
+            $scope.personageFlaws = data.personage.PersonageFlaws;
+            $scope.personageAttachedSkills = data.personage.PersonageAttachedSkills;
+            $scope.personageTriggerSkills = data.personage.PersonageTriggerSkills;
         });
 
         $scope.increaseAttribute = function (id) {
@@ -1076,12 +1028,15 @@
 
         $scope.decreaseAttribute = function (id) {
             angular.forEach($scope.personageAttributes, function (personageAttribute) {
-                angular.forEach($scope.prerequisites.attributePrerequisites.meritAttributes, function (meritAttribute) {
-                    if (personageAttribute.Attribute.id == meritAttribute.Attribute.id) {
-                        if (personageAttribute.value <= meritAttribute.value) {
-                            $scope.deletePersonageMerit($scope.prerequisites.attributePrerequisites.personageMerit);
+
+                angular.forEach($scope.personageMerits, function (personageMerit) {
+                    angular.forEach(personageMerit.Merit.MeritAttributes, function (meritAttribute) {
+                        if (personageAttribute.Attribute.id == meritAttribute.Attribute.id) {
+                            if (personageAttribute.value <= meritAttribute.value) {
+                                $scope.deletePersonageMerit(personageMerit);
+                            }
                         }
-                    }
+                    });
                 });
 
                 if (personageAttribute.id == id && personageAttribute.value > 1) {
@@ -1097,12 +1052,15 @@
 
         $scope.decreaseAttachedSkill = function (id) {
             angular.forEach($scope.personageAttachedSkills, function (personageAttachedSkill) {
-                angular.forEach($scope.prerequisites.attachedSkillsPrerequisites.meritAttachedSkills, function (meritAttachedSkill) {
-                    if (personageAttachedSkill.AttachedSkill.id == meritAttachedSkill.AttachedSkill.id) {
-                        if (personageAttachedSkill.value <= meritAttachedSkill.value) {
-                            $scope.deletePersonageMerit($scope.prerequisites.attachedSkillsPrerequisites.personageMerit);
+
+                angular.forEach($scope.personageMerits, function (personageMerit) {
+                    angular.forEach(personageMerit.Merit.MeritAttachedSkills, function (meritAttachedSkill) {
+                        if (personageAttachedSkill.AttachedSkill.id == meritAttachedSkill.AttachedSkill.id) {
+                            if (personageAttachedSkill.value <= meritAttachedSkill.value) {
+                                $scope.deletePersonageMerit(personageMerit);
+                            }
                         }
-                    }
+                    });
                 });
 
                 if (personageAttachedSkill.AttachedSkill.id == id && personageAttachedSkill.value > 0) {
@@ -1191,16 +1149,6 @@
                 };
 
                 $scope.personageMerits.push(personageMerit);
-
-                $scope.prerequisites.attributePrerequisites = {
-                    meritAttributes: meritObject.MeritAttributes,
-                    personageMerit: personageMerit
-                };
-
-                $scope.prerequisites.attachedSkillsPrerequisites = {
-                    meritAttachedSkills: meritObject.MeritAttachedSkills,
-                    personageMerit: personageMerit
-                };
 
                 $scope.personage.experience = $scope.personage.experience - meritObject.cost;
                 jQuery('#addMeritDialog').modal('hide');
@@ -1293,10 +1241,12 @@
             var index = $scope.personageAttachedSkills.indexOf(personageAttachedSkill);
             $scope.personageAttachedSkills.splice(index, 1);
 
-            angular.forEach($scope.prerequisites.attachedSkillsPrerequisites.meritAttachedSkills, function (meritAttachedSkill) {
-                if (personageAttachedSkill.AttachedSkill.id == meritAttachedSkill.AttachedSkill.id) {
-                    $scope.deletePersonageMerit($scope.prerequisites.attachedSkillsPrerequisites.personageMerit);
-                }
+            angular.forEach($scope.personageMerits, function (personageMerit) {
+                angular.forEach(personageMerit.Merit.MeritAttachedSkills, function (meritAttachedSkill) {
+                    if (personageAttachedSkill.AttachedSkill.id == meritAttachedSkill.AttachedSkill.id) {
+                        $scope.deletePersonageMerit(personageMerit);
+                    }
+                });
             });
 
             if (personageAttachedSkill.AttachedSkill.difficult) {
