--- a/public/views/merit.html
+++ b/public/views/merit.html
@@ -55,6 +55,27 @@
         </table>
     </div>
 
+    <div>
+        <h4 class="text-center">Пререквизиты-прикрепленные навыки+атрибуты</h4>
+        <table class="table table-striped">
+            <tr>
+                <th style="text-align: center">Атрибут</th>
+                <th style="text-align: center">Навык</th>
+                <th style="text-align: center">Сумма не меньше чем</th>
+                <th style="text-align: center"></th>
+            </tr>
+            <tr ng-repeat="meritAttributeAttachedSkill in meritAttributeAttachedSkills | orderBy : 'id'">
+                <td style="vertical-align:middle; text-align: center">{{meritAttributeAttachedSkill.Attribute.name}}</td>
+                <td style="vertical-align:middle; text-align: center">{{meritAttributeAttachedSkill.AttachedSkill.name}}</td>
+                <td style="vertical-align:middle; text-align: center">{{meritAttributeAttachedSkill.value}}</td>
+                <td style="vertical-align:middle; text-align: center">
+                    <button type="button" class="btn btn-link" ng-click="deleteMeritAttributeAttachedSkill(meritAttributeAttachedSkill.id)">х
+                    </button>
+                </td>
+            </tr>
+        </table>
+    </div>
+
     <div class="container">
         <h2>Создать пререквизит</h2>
 
@@ -71,7 +92,7 @@
                 </div>
             </div>
 
-            <div class="form-group" ng-hide="type != 1">
+            <div class="form-group" ng-show="type == 1 || type == 3">
                 <label class="control-label col-sm-2" for="attribute_id">Атрибут: </label>
 
                 <div class="col-sm-10">
@@ -84,7 +105,7 @@
                 </div>
             </div>
 
-            <div class="form-group" ng-hide="type != 2">
+            <div class="form-group" ng-show="type == 2 || type == 3">
                 <label class="control-label col-sm-2" for="attached_skill_id">Навык: </label>
 
                 <div class="col-sm-10">
@@ -97,8 +118,9 @@
                 </div>
             </div>
 
-            <div class="form-group" ng-show="type == 1 || type == 2">
-                <label class="control-label col-sm-2" for="value">Не меньше чем:</label>
+            <div class="form-group" ng-show="type == 1 || type == 2 || type == 3">
+                <label class="control-label col-sm-2" for="value" ng-show="type == 1 || type == 2">Не меньше чем:</label>
+                <label class="control-label col-sm-2" for="value" ng-show="type == 3">Сумма не меньше чем:</label>
 
                 <div class="col-sm-10">
                     <input type="number" ng-model="value" class="form-control" id="value" placeholder="2" ng-required="type == 1 || type == 2">
@@ -149,6 +171,9 @@
         $http.get('/merits/' + meritId).
         success(function (data) {
             $scope.merit = data.merit;
+            $scope.meritAttributes = data.merit.MeritAttributes;
+            $scope.meritAttachedSkills = data.merit.MeritAttachedSkills;
+            $scope.meritAttributeAttachedSkills = data.merit.MeritAttributeAttachedSkills;
         });
 
         $http.get('/attributes').
@@ -160,17 +185,6 @@
         success(function (data) {
             $scope.attachedSkills = data.attachedSkills;
         });
-
-        $http.get('/meritAttributesByMeritId/' + meritId).
-        success(function (data) {
-            $scope.meritAttributes = data.meritAttributes;
-        });
-
-        $http.get('/meritAttachedSkillsByMeritId/' + meritId).
-        success(function (data) {
-            $scope.meritAttachedSkills = data.meritAttachedSkills;
-        });
-
 
         $scope.createPrerequisite = function () {
             switch ($scope.type) {
@@ -193,6 +207,14 @@
                     });
                     break;
                 case 3:
+                    $http.post('/meritAttributeAttachedSkills', {
+                        merit_id: meritId,
+                        attribute_id: $scope.attribute_id,
+                        attached_skill_id: $scope.attached_skill_id,
+                        value: $scope.value
+                    }).success(function (data) {
+                        location.reload();
+                    });
                     break;
                 case 4:
                     break;
@@ -214,6 +236,13 @@
 
         $scope.deleteMeritAttachedSkill = function (id) {
             $http.delete('/meritAttachedSkills/' + id).
+            success(function (data) {
+                location.reload();
+            });
+        };
+
+        $scope.deleteMeritAttributeAttachedSkill = function (id) {
+            $http.delete('/meritAttributeAttachedSkills/' + id).
             success(function (data) {
                 location.reload();
             });
