--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -854,11 +854,15 @@
                 return $scope.personage.experience < 0;
             };
             $scope.personageAttributes = data.personage.PersonageAttributes;
-            $scope.personageMerits = data.personage.PersonageMerits;
             $scope.personageInherents = data.personage.PersonageInherents;
             $scope.personageFlaws = data.personage.PersonageFlaws;
             $scope.personageAttachedSkills = data.personage.PersonageAttachedSkills;
             $scope.personageTriggerSkills = data.personage.PersonageTriggerSkills;
+        });
+
+        $http.get('/personageMeritsByPersonageId/' + personageId).
+        success(function (data) {
+            $scope.personageMerits = data.personageMerits;
         });
 
         $scope.increaseAttribute = function (id) {
@@ -1102,8 +1106,10 @@
             var meritObject = angular.fromJson(merit);
 
             var attachedSkillSatisfied = true;
-            var attachedSkillExist = false;
             var attributeSatisfied = true;
+            var attributeAttachedSkillSatisfied = true;
+            var attachedSkillExist = false;
+            var attributeAttachedSkillExist = false;
 
             $http.get('/meritAttributesByMeritId/' + meritObject.id).
             success(function (results) {
@@ -1131,9 +1137,31 @@
                             }
                         });
                     });
-                    if (!attachedSkillSatisfied || !attributeSatisfied || !attachedSkillExist) {
-                        $scope.meritAvailable = false;
-                    }
+                    $http.get('/meritAttributeAttachedSkillsByMeritId/' + meritObject.id).
+                    success(function (results) {
+                        if (results.meritAttributeAttachedSkills.length == 0) {
+                            attributeAttachedSkillExist = true;
+                        }
+                        angular.forEach(results.meritAttributeAttachedSkills, function (meritAttributeAttachedSkill) {
+                            angular.forEach($scope.personageAttachedSkills, function (personageAttachedSkill) {
+                                if (meritAttributeAttachedSkill.AttachedSkillId == personageAttachedSkill.AttachedSkillId) {
+                                    attributeAttachedSkillExist = true;
+                                    angular.forEach($scope.personageAttributes, function (personageAttribute) {
+                                        if (meritAttributeAttachedSkill.AttributeId == personageAttribute.AttributeId) {
+                                            if (personageAttachedSkill.value + personageAttribute.value < meritAttributeAttachedSkill.value) {
+                                                attributeAttachedSkillSatisfied = false;
+                                            }
+                                        }
+                                    });
+                                }
+                            });
+                        });
+                        if (!attachedSkillSatisfied || !attributeSatisfied
+                                || !attachedSkillExist || !attributeAttachedSkillSatisfied
+                                || !attributeAttachedSkillExist) {
+                            $scope.meritAvailable = false;
+                        }
+                    });
                 });
             });
         };
